Fix CSS issue on Firefox when previewing record attributes

--- a/app/assets/stylesheets/parsers.css.scss
+++ b/app/assets/stylesheets/parsers.css.scss
@@ -15,8 +15,12 @@
   display: none;
 }
 
-.CodeRay .new-right {
-  margin-top: 10px;
+.CodeRay {
+  clear: both;
+  
+  .new-right {
+    margin-top: 10px;
+  }
 }
 
 .preview-navigation {
